blink: clear tooltips on frame leaves

If the mouse exits a frame fast enough, EventHandler can receive a
MouseLeave event without any intervening MouseMoved events. In this case, if
there was a tooltip for a previously hovered tooltip, the tooltip does not get
dismissed, which can cause it to draw over other apps or windows. The solution
is to dismiss any active tooltip for a frame when the mouse leaves that frame.

BUG=592085

Review-Url: https://codereview.chromium.org/2681803002
Cr-Commit-Position: refs/heads/master@{#452130}

Former-commit-id: a741cc8edf82ff1bf0850f9f8756419d6eaf60d0